movie list added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<h4>MoviesA</h4>
-<movies></movies>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-5 mt-5">
+            <movies></movies>
+        </div>
+    </div>
+</div>
