--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,11 +1,4 @@
-<div class="card" ***ngIf="selectedMovie">
-    <div class="card-body">
-        <span class="badge badge-warning">
-            id: {{ selectedMovie.id }} name: {{ selectedMovie.name }}
-        </span>
-    </div>
-</div>
-
+<movie-detail [movie]="selectedMovie"></movie-detail>
 <div class="card">
     <div class="card-header"> {{ title }} </div>
     <ul class="list-group list-group-flush">
